# maven_search_rs

./: Cargo.toml  LICENSE  README.md  RELEASE.md
.github/: dependabot.yml
.github/workflows/: test-lang-rust-ci.yml  test-lang-rust-clippy.yml
cmdline/: Cargo.toml
cmdline/src/: args.rs  main.rs
lib/: Cargo.toml
lib/src/: format.rs  http.rs  lib.rs  types.rs
src/: args.rs  format.rs  http.rs  lib.rs  main.rs  types.rs
