[workspace]
members = ["lib", "cmdline"]

resolver = "2"

[workspace.package]
version = "0.6.0"
description = "A library for searching in Maven Central and formatting to Maven/Gradle/Gradle.kts/Sbt/Ivy/Lein"
authors = ["Martin Grigorov <mgrigorov@apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/martin-g/maven_search_rs"
edition = "2024"
rust-version = "1.85.0"
keywords = ["maven", "java", "search"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://github.com/martin-g/maven_search_rs"
