[package]
name = "maven-search"
documentation = "https://docs.rs/maven-search/latest/"
version = "0.7.0"
description = "A library for searching in Maven Central and formatting to Maven/Gradle/Gradle.kts/Sbt/Ivy/Lein"
authors = ["Martin Grigorov <mgrigorov@apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/martin-g/maven_search_rs"
edition = "2024"
rust-version = "1.85.0"
keywords = ["maven", "java", "search"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://github.com/martin-g/maven_search_rs"

[dependencies]
env_logger = "0.11.6"
dialoguer = "0.12.0"
getargs = "0.5.0"
log = "0.4.29"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "3.1.4", features = ["json"] }
update-informer = "1.1.0"

[[bin]]
name = "maven-search"
path = "src/bin/maven_search.rs"
