[package]
name = "maven_search_cmdline"
version = "0.2.2"
edition = "2021"
authors = ["Martin Grigorov <mgrigorov@apache.org>"]
description = "A command libe utility for searching in Maven Central and formatting to Maven/Gradle/Gradle.kts/Sbt/Ivy/Lein"
license-file = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/martin-g/maven_search_rs"
keywords = ["maven", "java", "search"]
categories = ["command-line-utilities"]

[dependencies]
env_logger = "0.10.0"
dialoguer = "0.10.4"
getargs = "0.4.1"
log = "0.4.20"
#maven-search-lib = { path = "../lib" }
maven-search-lib = "0.2.1"
update-informer = "0.2.0"

[[bin]]
name = "maven-search"
path = "src/main.rs"
