[package]
name = "maven_search_cmdline"
documentation = "https://docs.rs/crate/maven_search_cmdline/latest"
categories = ["command-line-utilities"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true


[dependencies]
env_logger = "0.11.6"
dialoguer = "0.11.0"
getargs = "0.5.0"
log = "0.4.27"
maven-search-lib = { path = "../lib", version = "0.5.0" }
update-informer = "1.1.0"

[[bin]]
name = "maven-search"
path = "src/main.rs"
