[package]
name = "maven-search-lib"
authors = ["Martin Grigorov <mgrigorov@apache.org>"]
version = "0.2.1"
edition = "2021"
description = "A library for searching in Maven Central and formatting to Maven/Gradle/Gradle.kts/Sbt/Ivy/Lein"
license-file = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/martin-g/maven_search_rs"
keywords = ["maven", "java", "search"]

[dependencies]
getargs = "0.5.0"
log = "0.4.20"
ureq = { version = "2.8.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
