[package]
name = "maven-search-lib"
documentation = "https://docs.rs/maven-search-lib/latest/maven_search_lib/"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
getargs = "0.5.0"
log = "0.4.27"
ureq = { version = "3.0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"

[dev-dependencies]
env_logger = "0.11.8"
